--- a/src/i18n/locale/en.json
+++ b/src/i18n/locale/en.json
@@ -3,6 +3,7 @@
     "buttonChangeLanguage": "Change Language",
     "navBarAbout": "About",
     "navBarProjects": "Projects",
-    "navBarContact": "Contact"
+    "navBarContact": "Contact",
+    "changeLanguage": "Change Language"
   }
 }
