--- a/src/i18n/locale/pt.json
+++ b/src/i18n/locale/pt.json
@@ -3,6 +3,7 @@
     "buttonChangeLanguage": "Troque o idioma",
     "navBarAbout": "Sobre",
     "navBarProjects": "Projetos",
-    "navBarContact": "Contato"
+    "navBarContact": "Contato",
+    "changeLanguage": "Trocar idioma"
   }
 }
