--- a/src/i18n/locale/pt.json
+++ b/src/i18n/locale/pt.json
@@ -4,6 +4,8 @@
     "navBarAbout": "Sobre",
     "navBarProjects": "Projetos",
     "navBarContact": "Contato",
-    "changeLanguage": "Trocar idioma"
+    "changeLanguage": "Trocar idioma",
+    "titleNameAbout": " Eu sou o ",
+    "subTitleAbout": "Desenvolvedor Web"
   }
 }
