refactor: subTitleAbout and add vercel config

--- a/src/i18n/locale/en.json
+++ b/src/i18n/locale/en.json
@@ -6,7 +6,7 @@
     "navBarContact": "Contact",
     "changeLanguage": "Change Language",
     "titleNameAbout": "I'm ",
-    "subTitleAbout": "I'm Developer Web",
+    "subTitleAbout": "Developer Web",
     "projectTitle": "Projects",
     "buttonContact": "Contact-me",
     "viewProject": "View Project",
